Removes references to Plaster magazine.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jacob Charles Wilson
-description: Cultural copywriter and critic of art, photography, graphic design, and magazines.
+description: 
 url: https://jacobcharleswilson.com
 author:
     name: Jacob Charles Wilson
